# hina

./: .gitignore  CMakeLists.txt  README.md
include/: hina.h
src/: crypto.cpp  crypto.h  hina.cpp  hina_impl.cpp  hina_impl.h  prng.cpp  prng.h  random_stream.cpp  random_stream.h  slice2d.cpp  slice2d.h  test.cpp  types.h
tools/: hina.py  server.py
tools/public/: index.html
